Message List: Fix layout shift on iOS (#610)

--- a/src/components/middle/ScrollDownButton.scss
+++ b/src/components/middle/ScrollDownButton.scss
@@ -18,7 +18,7 @@
 
   @media (max-width: 600px) {
     right: 0.5rem;
-    bottom: 4rem;
+    bottom: 4.5rem;
   }
 
   &-inner {
